# ros-training

./: .gitignore  .gitmodules  README.md  ros 1.1.cpp  ros 1.2.cpp
src/alica_ros_flatland_turtle/: CMakeLists.txt  package.xml
src/alica_ros_flatland_turtle/etc/behaviours/: WaitForMsg.beh  WaitForTrigger.beh
src/alica_ros_flatland_turtle/include/alica_ros_flatland/: base.hpp  turtle_ros1_interfaces.hpp
src/alica_ros_flatland_turtle/launch/: env.launch  turtle.launch
src/alica_ros_flatland_turtle/libalica-ros-flatland/: CMakeLists.txt
src/alica_ros_flatland_turtle/src/: base.cpp  base_node.cpp  turtle_ros1_interfaces.cpp
src/battery_indicator/: CMakeLists.txt  package.xml
src/battery_indicator/launch/: battery_indicator.launch
src/battery_indicator/msg/: BatteryStatus.msg
src/battery_indicator/src/: battery_node.py
src/flatland_models/: CMakeLists.txt  conestogo_office.yaml  package.xml  turtlebot.model.yaml  world.yaml
src/flatland_models/launch/: sim.launch
tasks/: README.md
tasks/alica/: README.md
